scss/pivotgrid/_layout.scss
@include exports('pivotgrid/layout') {
    .k-pivot {
        position: relative;
    }

    .k-pivot-toolbar {
        padding: $padding-x;
        border-bottom-width: 1px;
        border-bottom-style: solid;
    }

    .k-pivot-toolbar .k-button,
    .k-fieldselector .k-list li.k-item {
        @include border-radius( $border-radius );
        padding: $button-padding-y ($button-padding-x * 7) $button-padding-y $button-padding-x;
        font-size: $font-size;
        line-height: $form-line-height;
        text-align: left;
        position: relative;
        cursor: move;
        white-space: normal;
    }

    .k-fieldselector .k-list li.k-item {
        margin: $button-padding-y-sm;
    }

    .k-settings-measures .k-button {
        margin-bottom: $button-padding-y-sm;
    }

    .k-settings-columns .k-button {
        margin-right: $button-padding-x;
    }

    .k-field-actions {
        position: absolute;
        right: $padding-y;
        top: $padding-y;
        line-height: 1;
        cursor: pointer;
    }

    .k-pivot-layout {
        border-spacing: 0;
        table-layout: auto;
    }

    .k-pivot-layout > tbody,
    .k-pivot td {
        vertical-align: top;
    }

    .k-pivot-layout > tbody > tr > td {
        padding: 0;
    }

    .k-pivot-rowheaders > .k-grid,
    .k-pivot-table > .k-grid {
        border-width: 0;
    }

    .k-pivot-rowheaders > .k-grid td:first-child,
    .k-pivot-table .k-grid-header .k-header.k-first {
        border-left-width: 1px;
    }

    .k-pivot-rowheaders > .k-grid td.k-first {
        border-left-width: 0;
    }

    .k-pivot-rowheaders > .k-grid {
        overflow: hidden;
    }

    .k-pivot-table {
        border-left-width: 1px;
        border-left-style: solid;
    }

    .k-pivot-table .k-grid-header-wrap > table {
        height: 100%;
    }

    .k-pivot .k-grid-header .k-header {
        vertical-align: top;
    }

    .k-pivot-layout .k-grid td {
        border-bottom-width: 1px;
    }

    .k-pivot-layout .k-grid-footer > td {
        border-top-width: 0;
    }

    .k-pivot-filter-window .k-treeview {
        max-height: 600px;
    }

    /* selector */
    .k-fieldselector {
        .k-edit-buttons {
            bottom: auto;
        }

        .k-edit-label {
            width: 16%;
        }

        .k-edit-field {
            width: 77%;

            > .k-widget,
            > .k-textbox {
                width: 99%;
            }
        }

        .k-edit-buttons {
            > input,
            > label {
                float: left;
                margin-top: .4em;
            }
        }

        p {
            margin: 0 0 $padding-y-sm;
            text-transform: uppercase;

            .k-icon {
                margin: 0 5px 0 0;
            }
        }

        .k-columns {
            > div {
                overflow: auto;
                padding: $padding-x;
                border-style: solid;
                border-width: 0 0 0 1px;
                float: left;
                width: 45%;
            }

            > div:first-child {
                border-width: 0;
            }

            > div + div {
                float: right;
                border-width: 0;
            }
        }

        div.k-treeview {
            border-width: 0;
            padding-left: $padding-x-sm;
            overflow: visible;
        }

        .k-list-container {
            margin-bottom: $spacer;
            padding: $padding-y-sm 0 0;
            border-style: solid;
            border-width: 1px;
        }

        .k-list {
            padding-bottom: $spacer * 2;

            li.k-item {
                border-width: 1px;
                border-style: solid;
            }
        }
    }
}

